# menu-today

./: .gitignore  Cargo.toml  Dockerfile  README.md  cspell.json
.github/workflows/: ci.yml  ci_push.yml
src/: cache.rs  encode.rs  fetcher.rs  image.rs  main.rs  render.rs  url.rs
src/api/: meal.rs  mod.rs
src/api/__tests__/: meal.rs  mod.rs
src/pages/: index.rs
src/routes/: app.rs  index.rs
src/states/: app.rs
src/templates/: index.rs
src/utils/: cache.rs  encode.rs  log.rs  mod.rs
src/utils/__tests__/: cache.rs  encode.rs  mod.rs  url.rs
