[package]
name = "menu-today"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
base64 = "0.21.5"
handlebars = "4.5.0"
image = "0.24.7"
mime_guess = "2.0.4"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
